Use forked social-auth-core

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,2 +1,2 @@
 six
-social-auth-core >= 1.2.0
+git+https://github.com/builtbykrit/social-core.git@313f9e3265351042f4af5ad61cf4bf2ce9b446ab#egg=social-auth-core
